--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["etok414 <etok414@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-nannou = "0.10.0"
+nannou = { git = "https://github.com/nannou-org/nannou", branch = "master" }
